app/yaml/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocicd
  labels:
    app: argocicd
    app.kubernetes.io/component: argocicd
    app.kubernetes.io/instance: argocicd
    app.kubernetes.io/name: argocicd
    app.kubernetes.io/part-of: argocicd-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: argocicd
  template:
    metadata:
      labels:
        app: argocicd
        deployment: argocicd
    spec:
      containers:
        - name: argocicd
          image: 'quay.io/argocicd/hello-world:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
