app/yaml/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: argocicd
  annotations:
    argocd.argoproj.io/hook: Sync
  #   argocd.argoproj.io/sync-wave: "11"
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: argocicd
    deployment: argocicd
